fix: alignment correction

--- a/studyBuffUI/src/RecommendationPage/Recommendation.css
+++ b/studyBuffUI/src/RecommendationPage/Recommendation.css
@@ -2,6 +2,7 @@
     margin-top: 88px;
     margin-left: 4px;
     display: flex;
+    width: 100%;
     
 }
 
@@ -14,8 +15,8 @@
 }
 
 .card {
-    width: 320px;
-    height: 254px;
+    width: 240px;
+    height: 240px;
     border-radius: 20px;
     background: rgb(7, 15, 45);;
     position: relative;
